--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
     </div>
 
     <script src="js/task.js"></script>
+    <!-- <script src="js/gallery-items.js"></script> -->
+
   </body>
 </html>
